--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "dependencies": {
     "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "nodemailer": "^6.9.1"
+  },
+  "scripts": {
+    "start": "vite",
+    "build": "tsc && vite build",
+    "postinstall": "npm run build",
+    "serve-heroku": "vite --host 0.0.0.0 --port $5173 preview"
   }
 }
