--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "scripts": {
     "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
     "postinstall": "npm run build",
     "serve-heroku": "vite --host 0.0.0.0 --port $5173 preview"
   }
